prim restart broken on crocus by prim restart fix for d3d12
!13681 (merged) caused a regression on crocus primitive restart.
I think adding the index to the mapping is broken with the non primconvert path.
!13681 (merged) caused a regression on crocus primitive restart.
I think adding the index to the mapping is broken with the non primconvert path.